src/test/resources/validation/error/multisetFieldInputArgumentNotSupported/schema.graphqls
type Film implements Node @table {
  id: ID!
  title: String!
}

type Inventory implements Node @table {
  id: ID!
  films(release: [Int!] = [2000] @field(name: "RELEASE_YEAR")
  ): [Film]
}

type Query {
  inventory: [Inventory!]!
}
